--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div id="modal" />
+    <div id="tooltip" />
   </body>
 </html>
